# servito

./: Cargo.toml  README.md  export_model.py  export_simple_model.py  sample.toml  simple_model.onnx
python/: config.py  encoder.py  export_broken_model.py  export_model.py  export_simple_model.py  simple_model.onnx  test.pt
src/: configuration.rs  main.rs  routes.rs
src/model/: mod.rs  onnx.rs  torch.rs
