[package]
edition = "2018"
name = "servito"
version = "0.1.0"
description = "Serve your model"
keywords = ["model", "server", "machinelearning"]
license = "Apache-2.0/MIT"
repository = "https://github.com/fgadaleta/servito"
authors = ["Francesco Gadaleta <francesco@amethix.com>"]


[dependencies]
lazy_static = "1.4"
ndarray = "0.13"
onnxruntime = "0.0.10"
onnxruntime-sys = "0.0.10"
thiserror = "1.0"
toml = "0.5.7"
tracing = "0.1"
tracing-subscriber = "0.2"
tract = "0.11.2"
tract-onnx = "0.11.2"
