[package]
authors = ["Francesco Gadaleta <francesco@amethix.com>"]
description = "Serve your model"
edition = "2018"
keywords = ["model", "server", "machinelearning"]
license = "Apache-2.0/MIT"
name = "servito"
repository = "https://github.com/fgadaleta/servito"
version = "0.1.0"

# [workspace]
# members = [
#     "torch_rt"
# ]

[dependencies]
actix-web = "3"
env_logger = "0.8.2"
json = "0.12.2"
lazy_static = "1.4"
ndarray = "0.13"
onnxruntime = "0.0.10"
onnxruntime-sys = "0.0.10"
serde = "1.0.116"
serde_derive = "1.0.117"
serde_json = "1.0.59"
thiserror = "1.0"
toml = "0.5.7"
tracing = "0.1"
tracing-subscriber = "0.2"
# tract = "0.11.2"
# tract-onnx = "0.11.2"
anyhow = "1.0.34"
tch = "0.3.0"
tch-serde = "0.3.0"

# torch_rt = { path = "./torch_rt" }


[profile]
[profile.release]
codegen-units = 1
incremental = false
lto = true
panic = "abort"
